Icon and app name changed

--- a/src/angular/road-story-tracking/src/index.html
+++ b/src/angular/road-story-tracking/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>RoadStoryTracking</title>
+    <title>City story tracking</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
